--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,26 @@
 [package]
-name = "orbit-predictor"
-version = "0.1.0"
+name = "star_trak"
+version = "0.4.0"
 authors = ["Mohammed Nawabuddin <MNahad@users.noreply.github.com>"]
+description = "WebAssembly-ready SGP4 realtime satellite tracker"
+repository = ""
+readme = "README.md"
+license-file = "LICENSE"
 edition = "2018"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 sgp4 = "0.5.0"
-ureq = { version = "1.5.1", features = ["json"] }
-chrono = "0.4.0"
+serde = "1.0.118"
+serde_json = "1.0.61"
+chrono = "0.4.19"
+wasm-bindgen = { version = "0.2.70", optional = true }
+
+[features]
+js-api = ["chrono/wasmbind", "wasm-bindgen/serde-serialize"]
+
+[lib]
+crate-type = ["cdylib", "rlib"]
+
+[profile.release]
+lto = true
+codegen-units = 1
