--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "star_trak"
-version = "0.5.0"
+version = "0.8.0"
 authors = ["Mohammed Nawabuddin <MNahad@users.noreply.github.com>"]
 description = "WebAssembly-ready SGP4 realtime satellite tracker"
 repository = ""
@@ -16,7 +16,7 @@ chrono = "0.4.19"
 wasm-bindgen = { version = "0.2.70", optional = true }
 
 [features]
-js-api = ["chrono/wasmbind", "wasm-bindgen/serde-serialize"]
+js-api = ["chrono/wasmbind", "wasm-bindgen"]
 
 [lib]
 crate-type = ["cdylib", "rlib"]
